log
Sat 07 Oct 2023 10:29:50 PM UTC: 
 tests:  0|5
total_score: 0/70
b3b4cd2
Sat 07 Oct 2023 11:24:53 PM UTC: 
 sudoku.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0972bbd
Sat 07 Oct 2023 11:25:08 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a9b9071
Sat 07 Oct 2023 11:25:56 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d13c969
Sun 08 Oct 2023 01:14:25 AM UTC: 
 sudoku.c | 39 ++++++++++++++++++++++++++++++++++++++-
 1 file changed, 38 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:77:64: error: subscripted value is neither array nor pointer nor vector
   77 |           if (validarSubMatriz[filaSubMatriz][columnaSubMatriz][num] == 1)
      |                                                                ^
sudoku.c:81:60: error: subscripted value is neither array nor pointer nor vector
   81 |           validarSubMatriz[filaSubMatriz][columnaSubMatriz][num] = 1;
      |                                                            ^
sudoku.c:50:7: error: variable ‘validarSubMatriz’ set but not used [-Werror=unused-but-set-variable]
   50 |   int validarSubMatriz[9][10] = {0};
      |       ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
12c911c
Sun 08 Oct 2023 01:15:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f46828a
Sun 08 Oct 2023 01:17:57 AM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
7fbbe6b
Sun 08 Oct 2023 01:28:23 AM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
9655afc
Sun 08 Oct 2023 01:35:34 AM UTC: 
 sudoku.c | 53 ++++++++++++++++++++++++-----------------------------
 1 file changed, 24 insertions(+), 29 deletions(-)
 tests:  2|4
total_score: 15/70
fadefff
Sun 08 Oct 2023 01:35:56 AM UTC: 
 sudoku.c | 53 +++++++++++++++++++++++++++++------------------------
 1 file changed, 29 insertions(+), 24 deletions(-)
 tests:  2|4
total_score: 15/70
8965fd6
Sun 08 Oct 2023 01:37:28 AM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
18c03d8
Sun 08 Oct 2023 02:36:47 AM UTC: 
 sudoku.c | 36 +++++++++++++++++++++++++-----------
 1 file changed, 25 insertions(+), 11 deletions(-)
 tests:  3|3
total_score: 25/70
5727afc
Sun 08 Oct 2023 02:42:25 AM UTC: 
 sudoku.c | 47 +++++++++++++++++++++++------------------------
 1 file changed, 23 insertions(+), 24 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:148:1: error: "/*" within comment [-Werror=comment]
  148 | /*
      |  
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
72d535a
Sun 08 Oct 2023 02:42:47 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
ffc7eed
Sun 08 Oct 2023 02:43:12 AM UTC: 
 sudoku.c | 51 +++++++++++++++++++++++++++++----------------------
 1 file changed, 29 insertions(+), 22 deletions(-)
 tests:  3|3
total_score: 25/70
4dd0373
Sun 08 Oct 2023 02:44:54 AM UTC: 
 sudoku.c | 38 --------------------------------------
 1 file changed, 38 deletions(-)
 tests:  3|3
total_score: 25/70
768965a
Sun 08 Oct 2023 02:45:10 AM UTC: 
 sudoku.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  3|3
total_score: 25/70
7f5a40b
Sun 08 Oct 2023 02:49:03 AM UTC: 
 sudoku.c | 35 +++++++++++++++++++++++++++++++++--
 1 file changed, 33 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
52cc1a4
